<resources>

    <string name="app_name">BasicCalculator</string>
    <string name="edtx_1">Enter number 1:</string>
    <string name="edtx_2">Enter number 2:</string>
    <string name="add_bt">+</string>
    <string name="sub_bt">-</string>
    <string name="mul_bt">*</string>
    <string name="div_bt">/</string>
    <string name="bt_1">1</string>
    <string name="bt_2">2</string>
    <string name="bt_3">3</string>
    <string name="bt_4">4</string>
    <string name="bt_5">5</string>
    <string name="bt_6">6</string>
    <string name="bt_7">7</string>
    <string name="bt_8">8</string>
    <string name="bt_9">9</string>
    <string name="bt_0">0</string>
    <string name="bt_eq">=</string>
    <string name="bt_dot">.</string>
    <string name="bt_ac">Ac</string>
    <string name="bt_bksp">C</string>
    <string name="bt_prsnt">%</string>
    <string name="exit_bt">OFF</string>
    <string name="ToastTxt3">Calculator OFF</string>
    <string name="ToastTxt4">App closed</string>
    <string name="ToastTxt5">Operation Canceled</string>
    <string name="DevloperInfo">

        A simple calculator\n
        by the group:\n
        The Dominators.

    </string>
    <string name="AlertTitle">Warning!</string>
    <string name="AlertMessage">Do you want to exit?</string>
    <string name="PositiveButtonTxt">Yes</string>
    <string name="NegativeButtonTxt">No</string>
    <string name="ToastTxt1">Please Enter numbers!</string>
    <string name="ToastTxt2">Already cleared</string>

</resources>


